<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ec8ec"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.semanientreprise.steemitcalc.Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/loaderWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/customLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:mk_color="@color/white"
            app:mk_type="Whirlpool" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/mainContentWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loaderWrapper">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/topFiveCoinsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/small_size"
                android:text="@string/top_five_coins"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/topFiveCoins_recView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topFiveCoinsText" />

            <TextView
                android:id="@+id/supportedCoinsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topFiveCoins_recView"
                android:layout_marginTop="@dimen/small_size"
                android:background="@color/white"
                android:padding="@dimen/small_size"
                android:text="@string/supported_coins"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bitcoinPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/supportedCoinsText"
                android:layout_marginTop="@dimen/medium_size"
                android:gravity="center_horizontal"
                android:text="@string/_1_btc_3_318_535_ngn"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sbdPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bitcoinPrice"
                android:layout_marginTop="@dimen/small_size"
                android:gravity="center_horizontal"
                android:text="@string/_1_sbd_800_ngn"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/steemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sbdPrice"
                android:layout_marginTop="@dimen/small_size"
                android:gravity="center_horizontal"
                android:text="@string/_1_steem_950_ngn"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/steemPrice"
                android:layout_marginLeft="@dimen/medium_size"
                android:layout_marginRight="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner"
                android:layout_marginLeft="@dimen/medium_size"
                android:layout_marginRight="@dimen/medium_size"
                android:layout_marginTop="@dimen/medium_size"
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.SteemitCalc">

                <EditText
                    android:id="@+id/input_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_amount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/medium_size"
                android:backgroundTint="@color/white"
                android:text="calculate" />

            <TextView
                android:id="@+id/cryptoCalculation_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_calculate"
                android:layout_marginTop="@dimen/small_size"
                android:gravity="center_horizontal"
                android:text="25 SBD will be approximately 45,000 NGN"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>