<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_size">

    <LinearLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/clicked_coin_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@android:drawable/presence_busy" />

        <TextView
            android:id="@+id/clicked_coin_name"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/small_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:text="Coin Name"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/downArrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_drop_down" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coinDetails_wrapper"
        android:layout_below="@+id/title_wrapper"
        android:layout_marginLeft="@dimen/medium_size"
        >
        <TextView
            android:id="@+id/clicked_coin_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_size"
            android:text="Name : "
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_name_title"
            android:text="Bitcoin"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/clicked_coin_symbol_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_name"
            android:layout_marginTop="@dimen/small_size"
            android:text="Symbol : "
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_name"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_symbol_title"
            android:text="ETH"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/clicked_coin_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_symbol"
            android:layout_marginTop="@dimen/small_size"
            android:text="Price : "
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_symbol"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_price_title"
            android:text="123,000.00"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/clicked_coin_change1h_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_price"
            android:layout_marginTop="@dimen/small_size"
            android:text="@string/change_in_one_hour"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_change1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_price"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_change1h_title"
            android:text="1.86%"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/clicked_coin_change24h_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_change1h"
            android:layout_marginTop="@dimen/small_size"
            android:text="@string/change_in_twenty_four_hour"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_change24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_change1h"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_change24h_title"
            android:text="1.86%"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/clicked_coin_change7d_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_change24h"
            android:layout_marginTop="@dimen/small_size"
            android:text="@string/change_in_seven_days"
            android:textSize="17sp"
            android:layout_marginBottom="@dimen/medium_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicked_change7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clicked_change24h"
            android:layout_marginTop="@dimen/small_size"
            android:layout_toRightOf="@+id/clicked_coin_change7d_title"
            android:text="1.86%"
            android:textSize="17sp" />

    </RelativeLayout>



</RelativeLayout>